force-app/main/default/objects/Lead/fields/Add_A_Message__c.field-meta.xml
<CustomField>
    <fullName>Add_A_Message__c</fullName>
    <label>Add A Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>