force-app/main/default/objects/Lead/fields/Application_Complete__c.field-meta.xml
<CustomField>
    <fullName>Application_Complete__c</fullName>
    <formula>AND(
NOT ISBLANK(Latitude),
NOT ISBLANK(Longitude),
NOT ISBLANK(cbsaZoneCode__c),
NOT ISBLANK(Application_Submission_Date__c )
)</formula>
    <label>Application Complete</label>
    <type>Checkbox</type>
</CustomField>