force-app/main/default/objects/Lead/fields/Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Date__c</fullName>
    <description>Date / Time that a contractor submitting their application.</description>
    <label>Application Submission Date</label>
    <type>DateTime</type>
</CustomField>