force-app/main/default/objects/Lead/fields/birthDate__c.field-meta.xml
<CustomField>
    <fullName>birthDate__c</fullName>
    <formula>IF(MONTH(birthDateFA__c) &lt; 10, &apos;0&apos;+TEXT(MONTH(birthDateFA__c)), TEXT(MONTH(birthDateFA__c)) )
+&apos;/&apos;+
IF(DAY(birthDateFA__c) &lt; 10, &apos;0&apos;+TEXT(DAY(birthDateFA__c)), TEXT(DAY(birthDateFA__c)) )
+&apos;/&apos;+
TEXT(YEAR(birthDateFA__c))</formula>
    <label>Birth Date (Formatted)</label>
    <type>Text</type>
</CustomField>