force-app/main/default/objects/Lead/fields/birthDateFA__c.field-meta.xml
<CustomField>
    <fullName>birthDateFA__c</fullName>
    <description>Birthdate is a required field for the outbound message &quot;Account Creation in Gil&quot;</description>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>