force-app/main/default/objects/Lead/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <label>Contractor Capabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lawn Care</fullName>
            </value>
            <value>
                <fullName>Snow Removal</fullName>
            </value>
            <value>
                <fullName>Tree Trimming</fullName>
            </value>
            <value>
                <fullName>Interior House Cleaning</fullName>
            </value>
            <value>
                <fullName>Pool Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>