force-app/main/default/objects/Lead/fields/Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date__c</fullName>
    <description>Date/Time of Consumer or Contractor Case Creation by Process</description>
    <label>Case Created Date</label>
    <type>DateTime</type>
</CustomField>