force-app/main/default/objects/Lead/fields/cbsaZoneCode__c.field-meta.xml
<CustomField>
    <fullName>cbsaZoneCode__c</fullName>
    <description>CBSA Zone Code (needed for Gil Account creation)</description>
    <label>CBSA Zone Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>