force-app/main/default/objects/Lead/fields/companyAddress__c.field-meta.xml
<CustomField>
    <fullName>companyAddress__c</fullName>
    <formula>Street + &quot; &quot; + City + &quot; &quot; + State + &quot; &quot; + PostalCode</formula>
    <label>Company Address</label>
    <type>Text</type>
</CustomField>