force-app/main/default/objects/Lead/fields/foundedDate__c.field-meta.xml
<CustomField>
    <fullName>foundedDate__c</fullName>
    <description>Founded Date = &quot;In business since&quot; Required field for outbound message &quot;Account Creation in Gil&quot;</description>
    <label>foundedDate</label>
    <length>4</length>
    <type>Text</type>
</CustomField>