force-app/main/default/objects/Lead/fields/Hear_About_TaskEasy__c.field-meta.xml
<CustomField>
    <fullName>Hear_About_TaskEasy__c</fullName>
    <label>Hear About TaskEasy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Friend/Colleague</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Search Engine</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Trade show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>