force-app/main/default/objects/Lead/fields/Interested_Services__c.field-meta.xml
<CustomField>
    <fullName>Interested_Services__c</fullName>
    <label>Interested Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bush trimming</fullName>
            </value>
            <value>
                <fullName>Desertscaping</fullName>
            </value>
            <value>
                <fullName>Gutter Cleaning</fullName>
            </value>
            <value>
                <fullName>Lawn aeration</fullName>
            </value>
            <value>
                <fullName>Lawn mowing</fullName>
            </value>
            <value>
                <fullName>Fall cleanup</fullName>
            </value>
            <value>
                <fullName>Spring cleanup</fullName>
            </value>
            <value>
                <fullName>Lawn fertilization</fullName>
            </value>
            <value>
                <fullName>Pressure washing</fullName>
            </value>
            <value>
                <fullName>Sales cleans</fullName>
            </value>
            <value>
                <fullName>Snow removal</fullName>
            </value>
            <value>
                <fullName>Disinfection and Sanitation (COVID-19)</fullName>
            </value>
            <value>
                <fullName>Move-In/Move-Out Cleaning</fullName>
            </value>
            <value>
                <fullName>Pool Cleaning</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>