force-app/main/default/objects/Lead/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <formula>Latitude</formula>
    <label>Latitude__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>