force-app/main/default/objects/Lead/fields/loginName__c.field-meta.xml
<CustomField>
    <fullName>loginName__c</fullName>
    <description>Required field for outbound message &quot;Account creation in Gil&quot;</description>
    <formula>Email</formula>
    <label>loginName</label>
    <type>Text</type>
</CustomField>