force-app/main/default/objects/Lead/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>Longitude</formula>
    <label>Longitude__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>