force-app/main/default/objects/Lead/fields/Markets__c.field-meta.xml
<CustomField>
    <fullName>Markets__c</fullName>
    <label>Markets</label>
    <type>TextArea</type>
</CustomField>