force-app/main/default/objects/Lead/fields/Messaging_Opt_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Opt_in_Date__c</fullName>
    <label>Messaging Opt-in Date</label>
    <type>DateTime</type>
</CustomField>