force-app/main/default/objects/Lead/fields/Messaging_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Messaging Opt Out</label>
    <type>Checkbox</type>
</CustomField>