force-app/main/default/objects/Lead/fields/Opportunity_Origination__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Origination__c</fullName>
    <label>Opportunity Origination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Origination</valueSetName>
    </valueSet>
</CustomField>