force-app/main/default/objects/Lead/fields/Other_Property_Management_Software__c.field-meta.xml
<CustomField>
    <fullName>Other_Property_Management_Software__c</fullName>
    <description>Lives on Account and Lead Objects</description>
    <label>Other Property Management Software</label>
    <type>TextArea</type>
</CustomField>