force-app/main/default/objects/Lead/fields/ownersName__c.field-meta.xml
<CustomField>
    <fullName>ownersName__c</fullName>
    <formula>FirstName + &quot; &quot; + LastName</formula>
    <label>Owners Name</label>
    <type>Text</type>
</CustomField>