force-app/main/default/objects/Lead/fields/Preferred_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Zip_Code__c</fullName>
    <description>Preferred neighborhoods/areas/zip codes contractor would like to service</description>
    <label>Preferred Zip Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>