force-app/main/default/objects/Lead/fields/Properties_that_need_service__c.field-meta.xml
<CustomField>
    <fullName>Properties_that_need_service__c</fullName>
    <description>Field was originally called Properties That Need Service&quot;</description>
    <label>Total Property Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>