force-app/main/default/objects/Lead/fields/Property_Portfolio_Mgmt_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Portfolio_Mgmt_Type__c</fullName>
    <label>Property Portfolio/Mgmt Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Multi Family</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>iBuyer</fullName>
            </value>
            <value>
                <fullName>Short Term Rental</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>Build for Rent</fullName>
            </value>
            <value>
                <fullName>Senior Living</fullName>
            </value>
            <value>
                <fullName>Student Housing</fullName>
            </value>
            <value>
                <fullName>City/Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>