force-app/main/default/objects/Lead/fields/Referred_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Email__c</fullName>
    <description>Email address of the individual referring this lead.</description>
    <label>Referred by (Email)</label>
    <type>Email</type>
</CustomField>