force-app/main/default/objects/Lead/fields/Referred_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Name__c</fullName>
    <description>Name of the individual who referred this lead.</description>
    <label>Referred by (Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>