force-app/main/default/objects/Lead/fields/Referrer_Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Short_URL__c</fullName>
    <formula>IF(FIND(&quot;source=&quot;, Referrer__c )&gt;0,
MID(
Referrer__c ,
1,
FIND(&quot;&amp;&quot;, Referrer__c)-1)
,
Referrer__c
)</formula>
    <label>Referrer Short URL</label>
    <type>Text</type>
</CustomField>