force-app/main/default/objects/Lead/fields/Referrer_Source__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Source__c</fullName>
    <formula>IF(FIND(&quot;source=&quot;, Referrer__c )&gt;0,
MID(
Referrer__c ,
FIND(&quot;source=&quot;, Referrer__c )+7,
FIND(&quot;&amp;&quot;, Referrer__c, FIND(&quot;&amp;&quot;, Referrer__c ))-(FIND(&quot;source=&quot;, Referrer__c )+7))
,
&quot;Direct Traffic&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Source</label>
    <type>Text</type>
</CustomField>