force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Manager, Facility Manager, Government Agency, Homeowner, Investor, Landlord, Property Manager, Vendor, Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>