force-app/main/default/objects/Lead/fields/Role_at_Company__c.field-meta.xml
<CustomField>
    <fullName>Role_at_Company__c</fullName>
    <label>Role at Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Facility Manager</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Vendor (Contractor, Landscaper, Cleaner, etc.)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>