force-app/main/default/objects/Lead/fields/Sent_to_Gil_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Gil_Date__c</fullName>
    <description>Automatically checked when record is sent to Gil via Outbound Message</description>
    <label>Sent to Gil Date</label>
    <type>DateTime</type>
</CustomField>