force-app/main/default/objects/Lead/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <description>used for reporting average age of Lead data</description>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>