force-app/main/default/objects/Lead/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <formula>NOW()- Status_Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>