force-app/main/default/objects/Lead/fields/Type_of_work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_work__c</fullName>
    <description>How does the contractor want to work with TaskEasy</description>
    <label>Type of work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular Schedule</fullName>
            </value>
            <value>
                <fullName>On-Demand Jobs</fullName>
            </value>
            <value>
                <fullName>A combination of both options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>