force-app/main/default/objects/Lead/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Total number of units</description>
    <inlineHelpText>Total number of units</inlineHelpText>
    <label>Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>