force-app/main/default/objects/Lead/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>SFR (Owners)</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>iBuyer</fullName>
            </value>
            <value>
                <fullName>Prop Pres</fullName>
            </value>
            <value>
                <fullName>Build for Rent</fullName>
            </value>
            <value>
                <fullName>City/HOA</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Multi Family</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>Short Term Rental</fullName>
                <isActive>false</isActive>
                <label>Short Term Rental</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>