force-app/main/default/objects/Lead/fields/Web_Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_ID__c</fullName>
    <description>Landing page ID of the form that web form that this lead originated from. Currently Mapped with FormAssembly.</description>
    <label>Web Form ID</label>
    <type>TextArea</type>
</CustomField>