force-app/main/default/objects/Lead/fields/What_types_of_property_need_service__c.field-meta.xml
<CustomField>
    <fullName>What_types_of_property_need_service__c</fullName>
    <label>What types of property need service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential (Single-Family Home)</fullName>
            </value>
            <value>
                <fullName>Commercial (Multi-Family, Retail, Office)</fullName>
            </value>
            <value>
                <fullName>Public Space (Local, State, or Federal)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>