force-app/main/default/objects/Lead/fields/Which_Best_Describes_You__c.field-meta.xml
<CustomField>
    <fullName>Which_Best_Describes_You__c</fullName>
    <label>Which Best Describes You?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>Renter</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Vendor ( Contractor, Landscaper, Cleaner, etc. )</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>