force-app/main/default/objects/Lead/recordTypes/Client_Lead.recordType-meta.xml
<RecordType>
    <fullName>Client_Lead</fullName>
    <active>true</active>
    <businessProcess>Client Lead Process</businessProcess>
    <label>Client Lead</label>
</RecordType>