force-app/main/default/objects/Lead/recordTypes/Consumer_Leads.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Leads</fullName>
    <active>true</active>
    <businessProcess>Consumer Lead Process</businessProcess>
    <label>Consumer Lead</label>
</RecordType>