force-app/main/default/objects/Lead/recordTypes/Contractor_Lead.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Lead</fullName>
    <active>true</active>
    <businessProcess>Contractor Lead Process</businessProcess>
    <label>Contractor Lead</label>
</RecordType>