force-app/main/default/objects/Lead/validationRules/Opp_Origination_Req_if_Status_not_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Origination_Req_if_Status_not_Open</fullName>
    <active>false</active>
    <description>This rule prevents the status being changed from &quot;Open&quot; without a valid Opportunity Origination Value selected.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISBLANK(TEXT(Opportunity_Origination__c)))</errorConditionFormula>
    <errorDisplayField>Opportunity_Origination__c</errorDisplayField>
    <errorMessage>You must select a valid Opportunity Origination value before changing the status of this lead.</errorMessage>
</ValidationRule>