force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>Role_at_Company__c</columns>
    <columns>Properties_that_need_service__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>bdavi</value>
    </filters>
    <label>All Open Leads</label>
</ListView>