force-app/main/default/objects/Lead/listViews/Contractor_Recruitment_Not_Sent_to_Gil.listView-meta.xml
<ListView>
    <fullName>Contractor_Recruitment_Not_Sent_to_Gil</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>birthDateFA__c</columns>
    <columns>birthDate__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Referrer__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Sent_to_Gil_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Contractor_Lead</value>
    </filters>
    <filters>
        <field>Sent_to_Gil_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Contractor Recruitment - Not Sent to Gil</label>
</ListView>