force-app/main/default/objects/Lead/listViews/Copy_of_All_Open_Leads.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Open_Leads</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Role_at_Company__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Opportunity_Origination__c</columns>
    <columns>Referrer__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads All Time</label>
</ListView>