force-app/main/default/objects/Lead/listViews/Fort_Myers_Campaign_Leads.listView-meta.xml
<ListView>
    <fullName>Fort_Myers_Campaign_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Fort Myers Campaign Leads</label>
</ListView>