force-app/main/default/objects/Lead/listViews/Kelli_s_Leads.listView-meta.xml
<ListView>
    <fullName>Kelli_s_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Opportunity_Origination__c</columns>
    <columns>SalesLoft1__Most_Recent_Cadence_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Working</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/15/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>kelli</value>
    </filters>
    <label>Kelli&apos;s Leads</label>
</ListView>