force-app/main/default/objects/Lead/listViews/Lead_Queue.listView-meta.xml
<ListView>
    <fullName>Lead_Queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Working</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>kelli</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Web,Web Page Form</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/15/2020 12:00 AM</value>
    </filters>
    <label>Lead Queue</label>
</ListView>