force-app/main/default/objects/Lead/listViews/Leads_for_Cleans.listView-meta.xml
<ListView>
    <fullName>Leads_for_Cleans</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Opportunity_Origination__c</columns>
    <columns>Referrer_Short_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referrer__c</field>
        <operation>equals</operation>
        <value>https://www.taskeasy.com/contractors/cleans</value>
    </filters>
    <label>Leads for Cleans</label>
    <sharedTo>
        <group>New_Verticals_Recruitment_Team</group>
        <group>New_Verticals_Team</group>
    </sharedTo>
</ListView>